# Cryptology-Librarium

./: .gitignore  CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: algorithm_feature.md  bug_report.md  new_task.md
cryptolibrium/include/cryptolibrium/cipher/: caesar_cipher.hpp
docs/cipher/classical/: caesar_cipher.md  playfair_cipher.md
examples/cipher/classical/: caesar_example.cpp  playfair_example.cpp
include/cryptolibrium/cipher/: playfair_cipher.hpp  rail_fence_cipher.hpp
src/cipher/: caesar_cipher.cpp  playfair_cipher.cpp  rail_fence_cipher.cpp
tests/cipher/classical/: caesar_test.cpp  plarfair_test.cpp  playfair_test.cpp  rail_fence_test.cpp
